--- a/www/index.html
+++ b/www/index.html
@@ -17,6 +17,7 @@
             <h5 class="titulo">Só de Cenoura</h5>
 
             <div>
+                <i class="material-icons waves-effect waves-light waves-circle scan-qrcode">camera</i>
                 <i data-activates="submenu" data-gutter="5" data-contrainwidth="false"
                     class="material-icons waves-effect waves-light waves-circle dropdown-button">more_vert</i>
             </div>
@@ -90,6 +91,7 @@
         </div>
     </div>
 
+    <script src="cordova.js"></script>
     <script src="js/jquery.min.js"></script>
     <script src="js/materialize.min.js"></script>
     <script src="js/app.js"></script>
