--- a/www/index.html
+++ b/www/index.html
@@ -81,7 +81,7 @@
             <blockquote id="resumo"></blockquote>
         </div>
         <div class="modal-footer">
-            <button class="btn deep-orange waves-effect waves-light modal-close">
+            <button class="btn deep-orange waves-effect waves-light modal-close acao-finalizar">
                 Pedir
             </button>
 
